<resources>
    <string name="app_name">Погугли</string>
    <string name="score">Вопрос</string>
    <string name="timer_left">Осталось</string>
    <string name="question_start">Это никогда не должно быть на экране</string>
    <string name="answer_start">Тест</string>
    <string name="you_found_before_score">Ты нашел</string>
    <string name="you_found_after_score">ответов</string>
    <string name="you_found_after_score1">ответ</string>
    <string name="you_found_after_score234">ответа</string>
    <string name="level0">Позорище!!!</string>
    <string name="level1">Слабо!\nУчись гуглить.</string>
    <string name="level2">Не очень!\nТренируйся.</string>
    <string name="level3">Неплохо!\nНо ты можешь лучше.</string>
    <string name="level4">Хорошо!\nТы круто гуглишь.</string>
    <string name="level5">Отлично!\nТы супер крут.</string>
    <string name="levelWin">Ты победил!\nТы бог ГУГЛА.</string>
    <string name="statistics">Статистика</string>
    <string name="best_result">Лучший результат</string>
    <string name="advice_start">Набери</string>
    <string name="advice_end">, чтобы стать лучшим</string>
    <string name="you_are_god">Ты бог ГУГЛА!</string>
    <string name="count_of_games">Игр сыграно</string>
    <string name="middle_result">Средний результат</string>
    <string name="clear">Очистить</string>
    <string name="clear_stat_dialog">Очистить всю статистику</string>
    <string name="are_you_sure">Вы уверены</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выход</string>
    <string name="version">version 1.00</string>
    <string name="release_date">Дата выпуска 06.08.2014</string>
    <string name="about_game">Что вы делаете, когда не знаете ответ на какой-либо вопрос? Вы заходите в интернет и начинаете гуглить. В наше время очень важно уметь быстро и качественно находить нужную информацию с помощью поисковых систем. Эта игра натренирует вас этому. Игра представляет классическую викторину с 4 ответами, но с той разницей, что в игру уже встроен браузер с открытым гуглом т.ч. вам не обязательно знать всю информацию, вы должны лишь уметь быстро найти ее. В игре есть таймер, т.ч. торопитесь.</string>
    <string name="e_mail"><u>maaaks777@mail.ru</u></string>
    <string name="vk_page"><u>vk.com/maaaks777</u></string>
    <string name="about_me">Эта игра - проект одного разработчика:\nМаксим Спирихин - студент НИЯУ МИФИ.\n«Эта игра - мой второй проект. Сначала я хотел сделать обычную викторину с необычными вопросами, но затем я вспомнил, как когда-то мы с друзьями играли на телефоне в \"Кто хочет стать миллионером\" и, используя Google, легко выигрывали. Я подумал, а почему бы не дать игрокам возможность делать это в самой игре? Так зародилась идея. Реализовать данную концепцию оказалось крайне просто. Проект был полностью готов за 3 дня, за одним исключением - в нем было всего 5 вопросов. Сначала мне казалось, что этот момент весьма прост и за день я, не напрягаясь, добавлю требуемые (сначала я планировал именно столько) 200-300 вопросов. Но это оказалось не так. Я с трудом добавил 25 вопросов и потратил много времени. Я решил отложить проект. Через 2 недели я вернулся к нему и стал писать вопросы. В ход шли вопросы из ЕГЭ по разным предметам, вопросы, основанные на моих знаниях и вопросы на чистый поиск, типа, столица Тувалу. Я очень устал и понял, что хватит 100 вопросов. Да, этого мало для игры без повтора вопросов, но, вряд ли, вы будете запоминать, например, население Гондураса. Да и, честно говоря, я буду удивлен, если кто-то будет играть в игру долго, и, тем более, я поражен тем, что вы это читаете. Если вам правда понравилась игра, напишите мне, я добавлю еще вопросов, но сейчас, я не вижу в этом смысла т.к., как я уже говорил, я удивлюсь, если кто-то будет играть долго. Тем не менее, мне кажется, проект получился весьма оригинальным. А вы как считаете? Жду ваших отзывов и предложений. И прошу оценить эту игру в play market.</string>
    <string name="my_first_game">Моя первая игра:</string>
    <string name="touch_game"><u>https://play.google.com/store/apps/details?id=com.thetouchgame</u></string>
</resources>