<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f5ff" >

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/statistics"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvBestResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/best_result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBestResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/advice_start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvCountOfGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAdvice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/count_of_games"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvMiddleResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCountOfGames"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/middle_result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMiddleResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:src="@drawable/stat" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvice"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/toMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/exit_background"
        android:text="" />

</RelativeLayout>