<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f5ff"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/timer_left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTimer"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_background"
        android:gravity="center_horizontal"
        android:text="@string/question_start"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />

    <LinearLayout
        android:id="@+id/ans1and2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvQuestion"
        android:layout_marginTop="4dp" >

        <Button
            android:id="@+id/answer1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/answer_start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/answer_start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ans3and4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ans1and2"
        android:layout_marginTop="4dp" >

        <Button
            android:id="@+id/answer3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/answer_start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/answer_start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <WebView
        android:id="@+id/webGoogle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ans3and4"
        android:layout_gravity="center"
        android:scaleType="centerInside" />

</RelativeLayout>